# bitter-codex

./: .gitignore  AGENTS.md  BACKPORT_POLICY.md  Makefile  README.md
codex-rs/app-server/: Cargo.toml  README.md
codex-rs/app-server-protocol/: Cargo.toml
codex-rs/app-server-protocol/src/: jsonrpc_lite.rs  lib.rs
codex-rs/app-server-protocol/src/protocol/: common.rs  event_mapping.rs  item_builders.rs  mod.rs  thread_history.rs  v1.rs
codex-rs/app-server-transport/: Cargo.toml
codex-rs/app-server-transport/src/: lib.rs  outgoing_message.rs
codex-rs/app-server-transport/src/transport/: mod.rs  stdio.rs  unix_socket_tests.rs  websocket.rs
codex-rs/app-server/src/: app_server_tracing.rs  bespoke_event_handling.rs  config_manager.rs  config_manager_service.rs  connection_rpc_gate.rs  in_process.rs  lib.rs  main.rs  message_processor.rs  message_processor_tracing_tests.rs  models.rs  outgoing_message.rs  request_processors.rs  request_serialization.rs  server_request_error.rs  thread_state.rs  thread_status.rs  transport.rs  transport_tests.rs
codex-rs/app-server/src/request_processors/: account_processor.rs  catalog_processor.rs  config_processor.rs  initialize_processor.rs  model_processor.rs  thread_lifecycle.rs  thread_processor.rs  thread_processor_tests.rs  thread_summary.rs  thread_summary_tests.rs  token_usage_replay.rs  turn_processor.rs
codex-rs/app-server/tests/common/: Cargo.toml  app_server_process.rs  lib.rs  mcp_process.rs  models_cache.rs  responses.rs  rollout.rs
codex-rs/app-server/tests/suite/: auth.rs  mod.rs  strict_config.rs
codex-rs/cli/: Cargo.toml
codex-rs/cli/src/: lib.rs  login.rs  main.rs
codex-rs/cli/tests/: app_server.rs  login.rs
codex-rs/config/: Cargo.toml
codex-rs/config/src/: config_requirements.rs  config_toml.rs  constraint.rs  diagnostics.rs  file_system.rs  hook_config.rs  host_name.rs  lib.rs  mcp_types.rs  merge.rs  overrides.rs  permissions_toml.rs  profile_toml.rs  project_root_markers.rs  requirements_exec_policy.rs  skills_config.rs  state.rs  strict_config.rs  strict_config_tests.rs  thread_config.rs  tui_keymap.rs  types.rs
codex-rs/config/src/loader/: layer_io.rs  mod.rs  tests.rs
codex-rs/core/: Cargo.toml
codex-rs/core/src/: client.rs  client_common.rs  client_common_tests.rs  client_tests.rs  codex_thread.rs  compact.rs  compact_remote.rs  compact_remote_v2.rs  compact_tests.rs  config_lock.rs  event_mapping.rs  event_mapping_tests.rs  exec.rs  exec_env.rs  exec_env_tests.rs  git_info_tests.rs  lib.rs  mention_syntax.rs  original_image_detail.rs  otel_init.rs  prompt_debug.rs  responses_retry.rs  rollout.rs  session_prefix.rs  session_startup_prewarm.rs  shell.rs  shell_detect.rs  shell_snapshot.rs  shell_snapshot_tests.rs  shell_tests.rs  skills.rs  spawn.rs  stream_events_utils.rs  stream_events_utils_tests.rs  test_support.rs  thread_manager.rs  thread_manager_tests.rs  thread_rollout_truncation.rs  thread_rollout_truncation_tests.rs  turn_metadata.rs  (+5 more)
codex-rs/core/src/config/: config_loader_tests.rs  config_tests.rs  edit.rs  managed_features.rs  mod.rs  network_proxy_spec.rs  otel.rs  permissions.rs
codex-rs/core/src/context/: available_skills_instructions.rs  collaboration_mode_instructions.rs  contextual_user_message.rs  contextual_user_message_tests.rs  environment_context.rs  fragment.rs  mod.rs  network_rule_saved.rs  permissions_instructions.rs  realtime_end_instructions.rs  realtime_start_instructions.rs  realtime_start_with_instructions.rs  skill_instructions.rs  turn_aborted.rs
codex-rs/core/src/context_manager/: history.rs  history_tests.rs  normalize.rs  updates.rs
codex-rs/core/src/session/: config_lock.rs  handlers.rs  input_queue.rs  mod.rs  rollout_reconstruction.rs  session.rs  tests.rs  turn.rs  turn_context.rs
codex-rs/core/src/state/: additional_context.rs  auto_compact_window.rs  mod.rs  service.rs  session.rs  session_tests.rs  turn.rs
codex-rs/core/src/tasks/: compact.rs  mod.rs  regular.rs  user_shell.rs
codex-rs/core/src/tools/: context.rs  context_tests.rs  events.rs  hosted_spec.rs  hosted_spec_tests.rs  mod.rs  parallel.rs  registry.rs  registry_tests.rs  router.rs  router_tests.rs  spec_plan.rs  spec_plan_tests.rs  tool_dispatch_trace_tests.rs  tool_search_entry.rs
codex-rs/core/src/unified_exec/: async_watcher.rs  async_watcher_tests.rs  errors.rs  head_tail_buffer.rs  head_tail_buffer_tests.rs  mod.rs  mod_tests.rs  process.rs  process_manager.rs  process_manager_tests.rs  process_state.rs  process_tests.rs
codex-rs/core/templates/agents/: orchestrator.md
codex-rs/core/templates/collab/: experimental_prompt.md
codex-rs/core/templates/goals/: continuation.md
codex-rs/core/templates/personalities/: gpt-5.2-codex_friendly.md  gpt-5.2-codex_pragmatic.md
codex-rs/core/templates/realtime/: backend_prompt.md
codex-rs/core/templates/review/: history_message_completed.md  history_message_interrupted.md
codex-rs/core/tests/: all.rs  responses_headers.rs
codex-rs/core/tests/common/: Cargo.toml  context_snapshot.rs  lib.rs  responses.rs  streaming_sse.rs  test_codex.rs  test_codex_exec.rs
codex-rs/core/tests/suite/: cli_stream.rs  (+16 more)
codex-rs/features/: Cargo.toml
codex-rs/features/src/: feature_configs.rs  legacy.rs  lib.rs  tests.rs
codex-rs/git-utils/: Cargo.toml
codex-rs/git-utils/src/: apply.rs  baseline.rs  branch.rs  errors.rs  info.rs  lib.rs  operations.rs
codex-rs/model-provider/: Cargo.toml
codex-rs/model-provider-info/: Cargo.toml
codex-rs/model-provider-info/src/: lib.rs  model_provider_info_tests.rs
codex-rs/model-provider/src/: auth.rs  bearer_auth_provider.rs  models_endpoint.rs  provider.rs
codex-rs/tools/: Cargo.toml  README.md
codex-rs/tools/src/: dynamic_tool_tests.rs  image_detail_tests.rs  json_schema.rs  json_schema_tests.rs  lib.rs  responses_api.rs  responses_api_tests.rs  tool_call.rs  tool_definition.rs  tool_definition_tests.rs  tool_executor.rs  tool_output.rs  tool_payload.rs  tool_spec.rs  tool_spec_tests.rs
codex-rs/tools/tests/: json_schema_policy_fixtures.rs
codex-rs/utils/pty/: Cargo.toml
(+301 files in other folders)
