[package]
name = "codex-app-server-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "codex_app_server_protocol"
path = "src/lib.rs"
doctest = false

[lints]
workspace = true

[dependencies]
codex-protocol = { workspace = true }
codex-utils-absolute-path = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_with = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["serde", "v7"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
