[package]
name = "codex-app-server-transport"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "codex_app_server_transport"
path = "src/lib.rs"
doctest = false

[lints]
workspace = true

[dependencies]
bytes = { workspace = true }
codex-app-server-protocol = { workspace = true }
codex-core = { workspace = true }
codex-uds = { workspace = true }
codex-utils-absolute-path = { workspace = true }
futures = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = [
    "io-std",
    "macros",
    "rt-multi-thread",
] }
tokio-tungstenite = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true, features = ["log"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
