[package]
edition.workspace = true
license.workspace = true
name = "codex-features"
version.workspace = true

[lib]
doctest = false
name = "codex_features"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
codex-otel = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tracing = { workspace = true, features = ["log"] }
