[package]
name = "codex-git-utils"
version.workspace = true
edition.workspace = true
license.workspace = true
readme = "README.md"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
codex-protocol = { workspace = true }
codex-utils-absolute-path = { workspace = true }
futures = { workspace = true, features = ["alloc"] }
gix = { workspace = true }
once_cell = { workspace = true }
regex = "1"
serde = { workspace = true, features = ["derive"] }
similar = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "process", "rt", "time"] }
walkdir = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }

[lib]
doctest = false
