[package]
edition.workspace = true
license.workspace = true
name = "codex-model-provider-info"
version.workspace = true

[lib]
doctest = false
name = "codex_model_provider_info"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
codex-api = { workspace = true }
codex-app-server-protocol = { workspace = true }
codex-protocol = { workspace = true }
http = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
maplit = { workspace = true }
pretty_assertions = { workspace = true }
toml = { workspace = true }
