[package]
edition.workspace = true
license.workspace = true
name = "codex-model-provider"
version.workspace = true

[lib]
doctest = false
name = "codex_model_provider"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
codex-api = { workspace = true }
codex-login = { workspace = true }
codex-model-provider-info = { workspace = true }
codex-models-manager = { workspace = true }
codex-otel = { workspace = true }
codex-protocol = { workspace = true }
http = { workspace = true }
tokio = { workspace = true, features = ["sync", "time"] }
tracing = { workspace = true, features = ["log"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
