[package]
edition.workspace = true
license.workspace = true
name = "codex-tools"
version.workspace = true

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
codex-protocol = { workspace = true }
codex-utils-string = { workspace = true }
jsonptr = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
urlencoding = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }

[lib]
doctest = false
