[package]
edition.workspace = true
license.workspace = true
name = "codex-utils-pty"
version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
portable-pty = { workspace = true }
tokio = { workspace = true, features = ["io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }

[dev-dependencies]
pretty_assertions = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[lib]
doctest = false
